fix z-index issue with modals

--- a/resources/js/components/models/modal/modal.scss
+++ b/resources/js/components/models/modal/modal.scss
@@ -3,6 +3,7 @@
 .a-modal {
 
     &__scrim {
+        z-index: 9;
         position: fixed;
         width: 100%;
         height: 100%;
